# fine-tuned-contract-extractor

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  conftest.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/results/: analysis_summary.json  baseline_summary.json  comparison_summary.json  training_summary.json
docs/: ARCHITECTURE.md  DATASET.md  DATA_PIPELINE.md  DECISIONS.md  DEVELOPMENT.md  EVALUATION.md  SCHEMA.md
evaluation/: _runner.py  analysis.py  compare.py  eval_base.py  eval_constrained_baseline.py  eval_finetuned.py  eval_prompt_baseline.py  metrics.py
extractor/: api.py  schemas.py
extractor/inference/: __init__.py  model_loader.py  prompt.py  stream.py
extractor/observability/: __init__.py  langfuse_setup.py
scripts/: __init__.py  benchmark_latency.py  run_local_inference.py
tests/: test_analysis.py  test_api.py  test_compare.py  test_cross_validate.py  test_eval_base.py  test_eval_constrained_baseline.py  test_eval_finetuned.py  test_eval_prompt_baseline.py  test_ingest_cuad.py  test_metrics.py  test_observability.py  test_prepare_dataset.py  test_push_to_hub.py  test_schemas.py  test_scripts.py  test_train.py
training/: cross_validate.py  ingest_cuad.py  prepare_dataset.py  push_to_hub.py  train.py
training/configs/: llama_8b_qlora.yaml
