[project]
name = "contract-extractor"
version = "0.1.0"
description = "Reproducible data pipeline and schema for fine-tuning LLMs on CUAD legal contract clause extraction."
requires-python = ">=3.11"

dependencies = [
    "pydantic>=2.9.0",
    "datasets>=3.0.0,<4.0.0",
    "transformers>=4.46.0",
    # required by the baseline evaluators for device_map="auto" model loading
    # (transformers delegates accelerated/multi-device placement to accelerate)
    "accelerate>=0.26.0",
    "python-dotenv>=1.0.0",
    # fuzzy date parsing for ingest_cuad
    "python-dateutil>=2.9.0",
    "tqdm>=4.66.0",
    "jinja2>=3.0",
    # YAML training-config loading for training/train.py
    "pyyaml>=6.0",
    # Phase 10 — uploading the LoRA adapter + model card to the HF Hub
    # (training/push_to_hub.py). Usually present transitively via transformers,
    # declared here because we import it directly.
    "huggingface_hub>=0.24.0",
    # Phase 8 — FastAPI serving layer (extractor/api.py)
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # Phase 9 — Langfuse observability (extractor/observability/). Optional at
    # runtime: the serving layer degrades to a no-op when keys are unset, but
    # the package is declared so a fresh install can enable tracing.
    "langfuse>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.7.0",
    # Starlette's TestClient (used by tests/test_api.py) requires httpx
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["extractor*", "training*", "evaluation*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
markers = [
    "network: tests that require internet access (e.g., tokenizer download); run with `pytest -m network`, skip with `pytest -m 'not network'`",
]
